# Agentic

./: Agentic_Capstone_Project.ipynb  Content_writer_agent.ipynb  README.md  exercise.py  exercise_1.txt  exercise_2_and_3.ipynb  pyproject.toml  tasks.yaml
Extras/: Content_writer_agent.ipynb
Extras/agentic_content_creation_pipeline/src/agentic_content_creation_pipeline/: crew.py
agentic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agentic_content_creation_pipeline/: README.md  pyproject.toml
agentic_content_creation_pipeline/src/agentic_content_creation_pipeline/: main.py
ethics_fang/src/ethics_fang/: crew.py  main.py
ethics_fang/src/ethics_fang/config/: agents.yaml  tasks.yaml
output/: crewai.com_content.txt
