[project]
name = "agentic_content_creation_pipeline"
version = "0.1.0"
description = "agentic_content_creation_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
agentic_content_creation_pipeline = "agentic_content_creation_pipeline.main:run"
run_crew = "agentic_content_creation_pipeline.main:run"
train = "agentic_content_creation_pipeline.main:train"
replay = "agentic_content_creation_pipeline.main:replay"
test = "agentic_content_creation_pipeline.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
